Updated services and tests for doctor and patient APIs